# Tensorpipe

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  OWNERS  README.en.md  README.zh.md  setup.py
ci/: build.sh  exec_ut.sh
cmake/: Options.cmake
tensorpipe/: CMakeLists.txt  config.h.in  tensorpipe.h  tensorpipe_npu.h
tensorpipe/benchmark/: CMakeLists.txt  benchmark_pipe.cc  benchmark_transport.cc  channel_registry.cc  channel_registry.h  measurements.h  options.cc  options.h  registry.h  transport_registry.cc  transport_registry.h
tensorpipe/channel/: channel.h  channel_boilerplate.h  channel_impl_boilerplate.h  context.h  context_boilerplate.h  context_impl_boilerplate.h  error.cc  error.h  helpers.cc  helpers.h
tensorpipe/channel/basic/: channel_impl.cc  channel_impl.h  context_impl.cc  context_impl.h  factory.cc  factory.h
tensorpipe/channel/cma/: channel_impl.cc  channel_impl.h  context_impl.cc  context_impl.h  factory.cc  factory.h
tensorpipe/channel/mpt/: channel_impl.cc  channel_impl.h  context_impl.cc  context_impl.h  factory.cc  factory.h  nop_types.h
tensorpipe/channel/npu_basic/: channel_impl.cc  channel_impl.h  constants.h  context_impl.cc  context_impl.h  factory.cc  factory.h
tensorpipe/channel/xth/: channel_impl.cc  channel_impl.h  context_impl.cc  context_impl.h  factory.cc  factory.h
tensorpipe/common/: address.cc  address.h  allocator.cc  allocator.h  buffer.h  busy_polling_loop.h  callback.h  cpu_buffer.h  deferred_executor.h  defs.h  device.h  device_id.cc  device_id.h  dl.h  epoll_loop.cc  epoll_loop.h  error.cc  error.h  error_macros.h  fd.cc  fd.h  ibv.cc  ibv.h  ibv_lib.h  memory.h  nop.h  npu.h  npu_buffer.cc  npu_buffer.h  npu_lib.h  npu_loop.cc  npu_loop.h  optional.h  queue.h  ringbuffer.h  ringbuffer_read_write_ops.h  ringbuffer_role.h  shm_ringbuffer.h  shm_segment.cc  shm_segment.h  (+7 more)
tensorpipe/core/: context.cc  context.h  context_impl.cc  context_impl.h  error.cc  error.h  listener.cc  listener.h  listener_impl.cc  listener_impl.h  message.h  nop_types.h  pipe.cc  pipe.h  pipe_impl.cc  pipe_impl.h
tensorpipe/misc/: CMakeLists.txt  dump_state_machine.cc
tensorpipe/python/: CMakeLists.txt  tensorpipe.cc
tensorpipe/test/: CMakeLists.txt  peer_group.h  test.cc  test_environment.cc  test_environment.h
tensorpipe/test/channel/: channel_test.cc  channel_test.h  channel_test_cpu.cc  channel_test_cpu.h  channel_test_npu.cc  channel_test_npu.h
tensorpipe/test/channel/basic/: basic_test.cc
tensorpipe/test/channel/cma/: cma_test.cc  probe.cc
tensorpipe/test/channel/mpt/: mpt_test.cc
tensorpipe/test/channel/npu_basic/: npu_basic_test.cc
tensorpipe/test/channel/xth/: xth_test.cc
tensorpipe/test/common/: defs_test.cc  epoll_loop_test.cc  npu_test.cc  ringbuffer_test.cc  shm_ringbuffer_test.cc  shm_segment_test.cc  system_test.cc
tensorpipe/test/core/: context_test.cc  listener_test.cc  pipe_test.cc  pipe_test.h
tensorpipe/test/transport/: connection_test.cc  context_test.cc  listener_test.cc  transport_test.h
tensorpipe/test/transport/ibv/: connection_test.cc  context_test.cc  ibv_test.h  sockaddr_test.cc
tensorpipe/test/transport/shm/: connection_test.cc  listener_test.cc  reactor_test.cc  shm_test.h  sockaddr_test.cc
tensorpipe/test/transport/uv/: connection_test.cc  context_test.cc  loop_test.cc  sockaddr_test.cc  uv_test.cc  uv_test.h
tensorpipe/transport/: connection.h  connection_boilerplate.h  connection_impl_boilerplate.h  context.h  context_boilerplate.h  context_impl_boilerplate.h  error.cc  error.h  listener.h  listener_boilerplate.h  listener_impl_boilerplate.h
tensorpipe/transport/ibv/: connection_impl.cc  connection_impl.h  constants.h  context_impl.cc  context_impl.h  error.cc  error.h  factory.cc  factory.h  listener_impl.cc  listener_impl.h  reactor.cc  reactor.h  sockaddr.cc  sockaddr.h  utility.cc  utility.h
tensorpipe/transport/shm/: connection_impl.cc  connection_impl.h  context_impl.cc  context_impl.h  factory.cc  factory.h  listener_impl.cc  listener_impl.h  reactor.cc  reactor.h  sockaddr.cc  sockaddr.h
tensorpipe/transport/uv/: connection_impl.cc  connection_impl.h  context_impl.cc  context_impl.h  error.cc  error.h  factory.cc  factory.h  listener_impl.cc  listener_impl.h  loop.cc  loop.h  sockaddr.cc  sockaddr.h  utility.cc  utility.h  uv.h
